Fix issue with empty cell colors on mobile

--- a/assets/scss/_board.scss
+++ b/assets/scss/_board.scss
@@ -47,6 +47,10 @@
     cursor: pointer;
 }
 
+.space.empty:active {
+    background-color: #ECF0F1;
+}
+
 .space.winner {
     @include transition(background-color 0.3s ease);
 }
